crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__real_world_buildkit_secret_mount.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 30,
        "end_column": 31,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# syntax=docker/dockerfile:1.7"
    }
  ],
  "escape": null,
  "has_buildkit_features": true,
  "instructions": [
    {
      "arg": null,
      "args": "node:22.11.0-bookworm-slim AS deps",
      "args_span": {
        "end_byte": 70,
        "end_column": 40,
        "end_line": 2,
        "start_byte": 36,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 70,
          "end_column": 40,
          "end_line": 2,
          "start_byte": 36,
          "start_column": 6,
          "start_line": 2
        },
        "text": "node:22.11.0-bookworm-slim AS deps"
      },
      "from": {
        "alias": "deps",
        "digest": null,
        "flags": [],
        "image": "node:22.11.0-bookworm-slim",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 35,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "label": null,
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 70,
        "end_column": 40,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "/app",
      "args_span": {
        "end_byte": 84,
        "end_column": 13,
        "end_line": 4,
        "start_byte": 80,
        "start_column": 9,
        "start_line": 4
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 84,
          "end_column": 13,
          "end_line": 4,
          "start_byte": 80,
          "start_column": 9,
          "start_line": 4
        },
        "text": "/app"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "WORKDIR",
      "keyword_span": {
        "end_byte": 79,
        "end_column": 8,
        "end_line": 4,
        "start_byte": 72,
        "start_column": 1,
        "start_line": 4
      },
      "label": null,
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 84,
        "end_column": 13,
        "end_line": 4,
        "start_byte": 72,
        "start_column": 1,
        "start_line": 4
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "package.json package-lock.json ./",
      "args_span": {
        "end_byte": 123,
        "end_column": 39,
        "end_line": 5,
        "start_byte": 90,
        "start_column": 6,
        "start_line": 5
      },
      "continuations": [],
      "copy": {
        "chmod": null,
        "chown": null,
        "destination": "./",
        "flags": [],
        "from": null,
        "kind": "copy",
        "sources": [
          "package.json",
          "package-lock.json"
        ]
      },
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 123,
          "end_column": 39,
          "end_line": 5,
          "start_byte": 90,
          "start_column": 6,
          "start_line": 5
        },
        "text": "package.json package-lock.json ./"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "COPY",
      "keyword_span": {
        "end_byte": 89,
        "end_column": 5,
        "end_line": 5,
        "start_byte": 85,
        "start_column": 1,
        "start_line": 5
      },
      "label": null,
      "line": 5,
      "mounts": [],
      "raw_span": {
        "end_byte": 123,
        "end_column": 39,
        "end_line": 5,
        "start_byte": 85,
        "start_column": 1,
        "start_line": 5
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "--mount=type=secret,id=npmrc,target=/root/.npmrc,required=true \\\n    npm ci --ignore-scripts",
      "args_span": {
        "end_byte": 220,
        "end_column": 28,
        "end_line": 7,
        "start_byte": 128,
        "start_column": 5,
        "start_line": 6
      },
      "continuations": [
        {
          "escape": "\\",
          "line": 6,
          "span": {
            "end_byte": 192,
            "end_column": 69,
            "end_line": 6,
            "start_byte": 191,
            "start_column": 68,
            "start_line": 6
          }
        }
      ],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [
        [
          "mount",
          "type=secret,id=npmrc,target=/root/.npmrc,required=true"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 220,
          "end_column": 28,
          "end_line": 7,
          "start_byte": 128,
          "start_column": 5,
          "start_line": 6
        },
        "text": "--mount=type=secret,id=npmrc,target=/root/.npmrc,required=true \\\n    npm ci --ignore-scripts"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 127,
        "end_column": 4,
        "end_line": 6,
        "start_byte": 124,
        "start_column": 1,
        "start_line": 6
      },
      "label": null,
      "line": 6,
      "mounts": [
        {
          "options": [
            [
              "type",
              "secret"
            ],
            [
              "id",
              "npmrc"
            ],
            [
              "target",
              "/root/.npmrc"
            ],
            [
              "required",
              "true"
            ]
          ],
          "type": "secret"
        }
      ],
      "raw_span": {
        "end_byte": 220,
        "end_column": 28,
        "end_line": 7,
        "start_byte": 124,
        "start_column": 1,
        "start_line": 6
      },
      "recovery": null,
      "run": {
        "flags": [
          [
            "mount",
            "type=secret,id=npmrc,target=/root/.npmrc,required=true"
          ]
        ],
        "mounts": [
          {
            "options": [
              [
                "type",
                "secret"
              ],
              [
                "id",
                "npmrc"
              ],
              [
                "target",
                "/root/.npmrc"
              ],
              [
                "required",
                "true"
              ]
            ],
            "type": "secret"
          }
        ],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 220,
            "end_column": 28,
            "end_line": 7,
            "start_byte": 191,
            "start_column": 68,
            "start_line": 6
          },
          "text": "\\\n    npm ci --ignore-scripts"
        }
      }
    }
  ],
  "syntax": {
    "image": "docker/dockerfile:1.7",
    "line": 1
  }
}
