crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__real_world_debian_packages.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "debian:12.8-slim",
      "args_span": {
        "end_byte": 21,
        "end_column": 22,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 21,
          "end_column": 22,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "debian:12.8-slim"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "debian:12.8-slim",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 21,
        "end_column": 22,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "apt-get update \\\n    && apt-get install -y --no-install-recommends \\\n        ca-certificates=20230311 \\\n        curl=7.88.1-10+deb12u8 \\\n        tini=0.19.0-1 \\\n    && rm -rf /var/lib/apt/lists/*",
      "args_span": {
        "end_byte": 222,
        "end_column": 35,
        "end_line": 8,
        "start_byte": 27,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [
        {
          "escape": "\\",
          "line": 3,
          "span": {
            "end_byte": 43,
            "end_column": 21,
            "end_line": 3,
            "start_byte": 42,
            "start_column": 20,
            "start_line": 3
          }
        },
        {
          "escape": "\\",
          "line": 4,
          "span": {
            "end_byte": 95,
            "end_column": 52,
            "end_line": 4,
            "start_byte": 94,
            "start_column": 51,
            "start_line": 4
          }
        },
        {
          "escape": "\\",
          "line": 5,
          "span": {
            "end_byte": 130,
            "end_column": 35,
            "end_line": 5,
            "start_byte": 129,
            "start_column": 34,
            "start_line": 5
          }
        },
        {
          "escape": "\\",
          "line": 6,
          "span": {
            "end_byte": 163,
            "end_column": 33,
            "end_line": 6,
            "start_byte": 162,
            "start_column": 32,
            "start_line": 6
          }
        },
        {
          "escape": "\\",
          "line": 7,
          "span": {
            "end_byte": 187,
            "end_column": 24,
            "end_line": 7,
            "start_byte": 186,
            "start_column": 23,
            "start_line": 7
          }
        }
      ],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 222,
          "end_column": 35,
          "end_line": 8,
          "start_byte": 27,
          "start_column": 5,
          "start_line": 3
        },
        "text": "apt-get update \\\n    && apt-get install -y --no-install-recommends \\\n        ca-certificates=20230311 \\\n        curl=7.88.1-10+deb12u8 \\\n        tini=0.19.0-1 \\\n    && rm -rf /var/lib/apt/lists/*"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 26,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 23,
        "start_column": 1,
        "start_line": 3
      },
      "label": null,
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 222,
        "end_column": 35,
        "end_line": 8,
        "start_byte": 23,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": null,
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 222,
            "end_column": 35,
            "end_line": 8,
            "start_byte": 27,
            "start_column": 5,
            "start_line": 3
          },
          "text": "apt-get update \\\n    && apt-get install -y --no-install-recommends \\\n        ca-certificates=20230311 \\\n        curl=7.88.1-10+deb12u8 \\\n        tini=0.19.0-1 \\\n    && rm -rf /var/lib/apt/lists/*"
        }
      }
    },
    {
      "arg": null,
      "args": "[\"/usr/bin/tini\", \"--\"]",
      "args_span": {
        "end_byte": 258,
        "end_column": 35,
        "end_line": 10,
        "start_byte": 235,
        "start_column": 12,
        "start_line": 10
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "json",
        "values": [
          "/usr/bin/tini",
          "--"
        ]
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ENTRYPOINT",
      "keyword_span": {
        "end_byte": 234,
        "end_column": 11,
        "end_line": 10,
        "start_byte": 224,
        "start_column": 1,
        "start_line": 10
      },
      "label": null,
      "line": 10,
      "mounts": [],
      "raw_span": {
        "end_byte": 258,
        "end_column": 35,
        "end_line": 10,
        "start_byte": 224,
        "start_column": 1,
        "start_line": 10
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "[\"bash\"]",
      "args_span": {
        "end_byte": 271,
        "end_column": 13,
        "end_line": 11,
        "start_byte": 263,
        "start_column": 5,
        "start_line": 11
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "json",
        "values": [
          "bash"
        ]
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "CMD",
      "keyword_span": {
        "end_byte": 262,
        "end_column": 4,
        "end_line": 11,
        "start_byte": 259,
        "start_column": 1,
        "start_line": 11
      },
      "label": null,
      "line": 11,
      "mounts": [],
      "raw_span": {
        "end_byte": 271,
        "end_column": 13,
        "end_line": 11,
        "start_byte": 259,
        "start_column": 1,
        "start_line": 11
      },
      "recovery": null,
      "run": null
    }
  ],
  "syntax": null
}
